--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,10 @@
 
 <h1>About</h1>
 <div class="clear"></div>
-<div id='map'></div>
-<a href='#' id='geolocate' class='ui-button'>Find me</a>
-<%= javascript_pack_tag 'geolocate' %>
+
+<div id="map-container">
+<div id="map"></div>
+</div>
+
+<%= javascript_pack_tag 'mapPoint' %>
 <div class="clear"></div>
