--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,5 @@
 <h1>FriendMeter</h1>
 
-<div class="desc col-xs-12 col-md-8">
-    <p>FriendMeter is a Social Media site where you can meet new people, and create and attend events in your area.</p>
-    <p>Currently boasting a whopping <strong><%= User.count %></strong> users, who have created <strong><%= Event.count %></strong> events, we are on track to be the biggest social media website in the world!</p>
-</div>
-
 <!-- show recent reviews in slider -->
 <div class="pic-ctn featured col-xs-12 col-md-4">
     <h2>Recent Reviews</h2>
@@ -17,13 +12,19 @@
                     <%= getPic(isSignedIn ? current_user.id : nil, r.user_id) %>
                     <p class="name"><%= getName(isSignedIn ? current_user.id : nil, r.user_id) %></p>
                 </a>
-                <a href="/events/<%= r.event_id %>"><p>Review for <strong><%= Event.find_by(id: r.event_id).name %></strong></p></a>
+                <p>Review for <strong><%= link_to Event.find_by(id: r.event_id).name, "/events/" + r.event_id.to_s %></strong></p>
                 <p><%= reviewRating(r.rating) %></p>
                 <p><%= r.text %></p>
             </div>
         <% end %>
     <% end %>
 </div>
+
+<div class="desc col-xs-12 col-md-8">
+    <p>FriendMeter is a Social Media site where you can meet new people, and create and attend events in your area.</p>
+    <p>Currently boasting a whopping <strong><%= User.count %></strong> users, who have created <strong><%= Event.count %></strong> events, we are on track to be the biggest social media website in the world!</p>
+</div>
+
 <div class="clear"></div>
 
 <!-- featured users -->
@@ -32,8 +33,8 @@
     <% if @fUsers.count == 0 %>
         <p>There are no users to display.</p>
     <% else %>
-        <% @fUsers.each do |user| %>
-            <%= getUserSm(user.id) %>
+        <% @fUsers.each do |u| %>
+            <%= getUserSm(u.id) %>
         <% end %>
     <% end %>
 </div>
@@ -44,8 +45,8 @@
     <% if @fEvents.count == 0 %>
         <p>There are no events to display.</p>
     <% else %>
-        <% @fEvents.each do |event| %>
-            <%= getEventSm(event.id) %>
+        <% @fEvents.each do |e| %>
+            <%= getEventSm(e.id) %>
         <% end %>
     <% end %>
 </div>
@@ -56,8 +57,8 @@
     <% if @fpEvents.count == 0 %>
         <p>There are no events to display.</p>
     <% else %>
-        <% @fpEvents.each do |event| %>
-            <%= getEventSm(event.id) %>
+        <% @fpEvents.each do |e| %>
+            <%= getEventSm(e.id) %>
         <% end %>
     <% end %>
 </div>
