--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -1,9 +1,14 @@
+#map-container {
+    min-height:200px;
+}
+
 #map {
     position:absolute;
-    top:100px;
-    bottom:130px;
-    left:10%;
-    width:80%;
+    //top:100px;
+    //bottom:130px;
+    //left:10%;
+    width:100%;
+    height:100%;
 }
 
 .ui-button {
