--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,15 +39,18 @@
 
     <h3>Address</h3>
     <p>Your address is just used to determine your location, and will not be shown to other users.</p>
+    <a href='#' id='geolocate' class='btn btn-success'>Find me (Approximately)</a>
+    <div id="message"></div>
+    <%= javascript_pack_tag 'maps' %>
     <div class="field">
       <%= f.label :Street %><br />
-      <%= f.text_field :street, autocomplete: "street" %>
+      <%= f.text_field :street, autocomplete: "street", id: "street" %>
       <%= f.label :City %><br />
-      <%= f.text_field :city, autocomplete: "city" %>
+      <%= f.text_field :city, autocomplete: "city", id: "city" %>
       <%= f.label :State %><br />
-      <%= f.text_field :state, autocomplete: "state" %>
+      <%= f.text_field :state, autocomplete: "state", id: "state" %>
       <%= f.label :Country %><br />
-      <%= f.text_field :country, autocomplete: "country" %>
+      <%= f.text_field :country, autocomplete: "country", id: "country" %>
     </div>
 
     
