--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,13 +1,32 @@
-<div class="form-wrapper">
-  <%= form_tag(events_path, method: :get, class: "form") do %>
-    <div class="field">
-      <%= text_field_tag(:search, params[:search]) %>
-    </div>
-    <div class="actions">
-      <%= submit_tag ("Search") %>
-    </div>
-  <% end %>
+<div class="col-xs-12 col-md-6">
+  <div class="form-wrapper">
+    <%= form_tag(events_path, method: :get, class: "form") do %>
+      <div class="field">
+        <%= text_field_tag(:search, params[:search]) %>
+      </div>
+      <div class="actions">
+        <%= submit_tag ("Search") %>
+      </div>
+    <% end %>
+  </div>
 </div>
+
+<% @loc = addrSet(current_user.id, "u") %>
+<div class="col-xs-12 col-md-6">
+  <div class="form-wrapper">
+    <%= form_tag(events_path, method: :get, class: "form") do %>
+      <div class="field" hidden="true">
+        <%= text_field_tag(:nearby, params[:nearby], value: true) %>
+      </div>
+      <%= !@loc ? "<p class='red'>You have not set a location yet! <a class='btn btn-success' href='/users/edit'>Set Your Location</a></p>".html_safe : "" %>
+      <div class="actions">
+        <%= submit_tag ("Find Events Near Me"), disabled: !@loc %>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+<div class="clear"></div>
 
 <% if params[:search] != nil %>
     <p>Your search for "<%= params[:search] %>" yielded <%= @events.count %> result<%= @events.count != 1 ? "s" : "" %>.</p>
