--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,6 +55,11 @@ h1 {
     color:#030;
 }
 
+.desc p {
+    font-size:22px;
+    padding:30px;
+}
+
 .comment, .review {
     width:650px;
     margin:auto;
