--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,25 +1,30 @@
 @import "fonts.scss"; //montserrat and open sans
 
+.navbar-header {
+  width:100%;
+  margin:auto !important;
+}
+
 .navbar-brand {
   font-family: 'Montserrat', sans-serif;
-  text-transform: uppercase
+  text-transform: uppercase;
 }
 
 .navbar .nav {
   font-family: 'Open Sans', sans-serif;
   text-transform: uppercase;
   letter-spacing: 3px;
-  font-size: 1.2rem
+  font-size: 1.2rem;
 }
 
 .navbar-inverse {
-  background-color: #003300
+  background-color: #003300;
 }
 
 .navbar-inverse .navbar-nav>.active>a:hover,
 .navbar-inverse .navbar-nav>li>a:hover,
 .navbar-inverse .navbar-nav>li>a:focus {
-  background-color: #002200
+  background-color: #002200;
 }
 
 .navbar-inverse .navbar-nav>.active>a,
@@ -29,16 +34,16 @@
 .navbar-inverse .navbar-nav>.open>a,
 .navbar-inverse .navbar-nav>.open>a:hover,
 .navbar-inverse .navbar-nav>.open>a:focus {
-  background-color: #003300
+  background-color: #003300;
 }
 
 .dropdown-menu {
-  background-color: #006B00
+  background-color: #006B00;
 }
 
 .dropdown-menu>li>a:hover,
 .dropdown-menu>li>a:focus {
-  background-color: #002200
+  background-color: #002200;
 }
 
 .navbar-inverse {
@@ -51,61 +56,61 @@
 }
 
 .navbar-inverse {
-  border-color: #003300
+  border-color: #003300;
 }
 
 .navbar-inverse .navbar-brand {
-  color: #FFFFFF
+  color: #FFFFFF;
 }
 
 .navbar-inverse .navbar-brand:hover {
-  color: #FFCC00
+  color: #FFCC00;
 }
 
 .navbar-inverse .navbar-nav>li>a {
-  color: #FFFFFF
+  color: #FFFFFF;
 }
 
 .navbar-inverse .navbar-nav>li>a:hover,
 .navbar-inverse .navbar-nav>li>a:focus {
-  color: #FFCC00
+  color: #FFCC00;
 }
 
 .navbar-inverse .navbar-nav>.active>a,
 .navbar-inverse .navbar-nav>.open>a,
 .navbar-inverse .navbar-nav>.open>a:hover,
 .navbar-inverse .navbar-nav>.open>a:focus {
-  color: #FFCC00
+  color: #FFCC00;
 }
 
 .navbar-inverse .navbar-nav>.active>a:hover,
 .navbar-inverse .navbar-nav>.active>a:focus {
-  color: #FFCC00
+  color: #FFCC00;
 }
 
 .dropdown-menu>li>a {
-  color: #FFFFFF
+  color: #FFFFFF;
 }
 
 .dropdown-menu>li>a:hover,
 .dropdown-menu>li>a:focus {
-  color: #FFCC00
+  color: #FFCC00;
 }
 
 .navbar-inverse .navbar-nav>.dropdown>a .caret {
-  border-top-color: #FFFFFF
+  border-top-color: #FFFFFF;
 }
 
 .navbar-inverse .navbar-nav>.dropdown>a:hover .caret {
-  border-top-color: #FFFFFF
+  border-top-color: #FFFFFF;
 }
 
 .navbar-inverse .navbar-nav>.dropdown>a .caret {
-  border-bottom-color: #FFFFFF
+  border-bottom-color: #FFFFFF;
 }
 
 .navbar-inverse .navbar-nav>.dropdown>a:hover .caret {
-  border-bottom-color: #FFFFFF
+  border-bottom-color: #FFFFFF;
 }
 
 
