--- a/app/views/html/_header.html.erb
+++ b/app/views/html/_header.html.erb
@@ -62,10 +62,10 @@
       </nav>
     </div>
   </header>
-  <div class="alert">
+  <div class="alert alert-warning">
       <%= alert %>
   </div>
-  <div class="notice">
+  <div class="notice alert-success">
       <%= notice %>
   </div>
   
