--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,6 +1,6 @@
 
 div.form-wrapper {
-    width:390px;
+    max-width:90%;
     margin:auto;
 }
 
@@ -22,6 +22,12 @@ form.form {
     input[type="file"] {
         background:transparent;
         padding:10px;
+    }
+
+    input[type="checkbox"] {
+        height:10px;
+        padding:0px;
+        margin:4px;
     }
 
     textarea {
