--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,10 +1,45 @@
 
-<h1>About</h1>
-<div class="clear"></div>
+<div class="slider-container featured col-xs-12 col-md-4">
+    <h2>Recent Reviews</h2>
+    <div class="slider-content">
 
-<div id="map-container">
-<div id="map"></div>
+        <div class="slider-single">
+            <img class="slider-single-image" src="https://picsum.photos/id/973/200/300" alt="1" />
+            <h1 class="slider-single-title">Through the Mountains</h1>
+        </div>
+
+        <div class="slider-single">
+            <img class="slider-single-image" src="https://picsum.photos/id/974/200/300" alt="2" />
+            <h1 class="slider-single-title">Through the Mountains</h1>
+        </div>
+
+        <div class="slider-single">
+            <img class="slider-single-image" src="https://picsum.photos/id/975/200/300" alt="3" />
+            <h1 class="slider-single-title">Through the Mountains</h1>
+        </div>
+
+
+        <div class="slider-single">
+            <img class="slider-single-image" src="https://picsum.photos/id/976/200/300" alt="4" />
+            <h1 class="slider-single-title">Through the Mountains</h1>
+        </div>
+
+
+        <div class="slider-single">
+            <img class="slider-single-image" src="https://picsum.photos/id/977/200/300" alt="5" />
+            <h1 class="slider-single-title">Through the Mountains</h1>
+        </div>
+
+        <div class="slider-single">
+            <img class="slider-single-image" src="https://picsum.photos/id/978/200/300" alt="6" />
+            <h1 class="slider-single-title">Through the Mountains</h1>
+            <a class="slider-single-likes" href="javascript:void(0);">
+                <i class="fa fa-heart"></i>
+                <p>1,247</p>
+            </a>
+        </div>
+    </div>
 </div>
 
-<%= javascript_pack_tag 'mapPoint' %>
-<div class="clear"></div>
+<%= javascript_pack_tag "carousel" %>
+<div class="clear">
