--- a/app/assets/stylesheets/carousel.scss
+++ b/app/assets/stylesheets/carousel.scss
@@ -1,56 +1,245 @@
-.pic-ctn {
-    height: 200px;
-  }
-  
-  @keyframes display {
+  $time: 500ms;
+  $delay: $time/2;
+  $mode: cubic-bezier(0.17, 0.67, 0.55, 1.43);
+  @keyframes heartbeat {
     0% {
-      transform: translateX(200px);
-      opacity: 0;
+      transform: scale(0);
     }
-    10% {
-      transform: translateX(0);
-      opacity: 1;
+    25% {
+      transform: scale(1.2);
     }
-    20% {
-      transform: translateX(0);
-      opacity: 1;
+    50% {
+      transform: scale(1);
     }
-    30% {
-      transform: translateX(-200px);
-      opacity: 0;
+    75% {
+      transform: scale(1.2);
     }
     100% {
-      transform: translateX(-200px);
-      opacity: 0;
+      transform: scale(1);
     }
   }
-  
-  .pic-ctn {
+  .slider-container {
     position: relative;
-    height: 370px;
-    margin-bottom:25px;
-  }
-  
-  .pic-ctn > div.review-sm {
-    position: absolute;
-    top: 0;
-    left: calc(50% - 100px);
-    opacity: 0;
-    animation: display 10s infinite;
-    margin-top:58px;
-  }
-  
-  div.review-sm:nth-child(2) {
-    animation-delay: 2s;
-  }
-  div.review-sm:nth-child(3) {
-    animation-delay: 4s;
-  }
-  div.review-sm:nth-child(4) {
-    animation-delay: 6s;
-  }
-  div.review-sm:nth-child(5) {
-    animation-delay: 8s;
+    height: 450px;
+    padding:0px;
+    .bullet-container {
+      position: absolute;
+      bottom: 10px;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .bullet {
+        margin-right: 14px;
+        &:last-child {
+          margin-right: 0px;
+        }
+        height: 20px;
+        width: 20px;
+        border-radius: 50%;
+        background-color: white;
+        opacity: 0.5;
+        &.active {
+          opacity: 1;
+        }
+      }
+    }
+    .slider-content {
+      position: relative;
+      left: 50%;
+      top: 30%;
+      width: 70%;
+      height: 60%;
+      transform: translate(-50%, -50%);
+      .slider-single {
+        position: absolute;
+        z-index: 0;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: auto;
+        transition: z-index 0ms $delay;
+        .slider-single-image {
+          position: relative;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.2);
+          transition: $time $mode;
+          transform: scale(0);
+          opacity: 0;
+        }
+        .slider-single-download {
+          position: absolute;
+          display: block;
+          right: -22px;
+          bottom: 12px;
+          padding: 15px;
+          color: #333333;
+          background-color: #fdc84b;
+          font-size: 18px;
+          font-weight: 600;
+          font-family: "karla";
+          border-radius: 5px;
+          box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+          transition: $time $mode;
+          opacity: 0;
+          &:hover,
+          &:focus {
+            outline: none;
+            text-decoration: none;
+          }
+        }
+        .slider-single-title {
+          display: block;
+          float: left;
+          margin: 16px 0 0 20px;
+          font-size: 20px;
+          font-family: "karla";
+          font-weight: 400;
+          color: #ffffff;
+          transition: $time $mode;
+          opacity: 0;
+        }
+        .slider-single-likes {
+          display: block;
+          float: right;
+          margin: 16px 20px 0 0;
+          transition: $time $mode;
+          opacity: 0;
+          i {
+            font-size: 20px;
+            display: inline-block;
+            vertical-align: middle;
+            margin-right: 5px;
+            color: #ff6060;
+            transition: $time $mode;
+            transform: scale(0);
+          }
+          p {
+            display: inline-block;
+            vertical-align: middle;
+            margin: 0;
+            color: #ffffff;
+          }
+          &:hover,
+          &:focus {
+            outline: none;
+            text-decoration: none;
+          }
+        }
+        &.preactivede {
+          //z-index: 0;
+          .slider-single-image {
+            //opacity: 0;
+            transform: translateX(-50%) scale(0);
+          }
+        }
+        &.preactive {
+          z-index: 1;
+          .slider-single-image {
+            opacity: 0.3;
+            transform: translateX(-25%) scale(0.8);
+          }
+          .slider-single-download {
+            transform: translateX(-150px);
+          }
+          .slider-single-title {
+            transform: translateX(-150px);
+          }
+          .slider-single-likes {
+            transform: translateX(-150px);
+          }
+        }
+        &.proactive {
+          z-index: 1;
+          .slider-single-image {
+            opacity: 0.3;
+            transform: translateX(25%) scale(0.8);
+          }
+          .slider-single-download {
+            transform: translateX(150px);
+          }
+          .slider-single-title {
+            transform: translateX(150px);
+          }
+          .slider-single-likes {
+            transform: translateX(150px);
+          }
+        }
+        &.proactivede {
+          //z-index: 0;
+          .slider-single-image {
+            //opacity: 0;
+            transform: translateX(50%) scale(0);
+          }
+        }
+        &.active {
+          z-index: 2;
+          //background:firebrick;
+          .slider-single-image {
+            opacity: 1;
+            transform: translateX(0%) scale(1);
+          }
+          .slider-single-download {
+            opacity: 1;
+            transition-delay: 100ms;
+            transform: translateX(0px);
+          }
+          .slider-single-title {
+            opacity: 1;
+            transition-delay: 200ms;
+            transform: translateX(0px);
+          }
+          .slider-single-likes {
+            opacity: 1;
+            transition-delay: 300ms;
+            transform: translateX(0px);
+            i {
+              animation-name: heartbeat;
+              animation-duration: 500ms;
+              animation-delay: 900ms;
+              //animation-interation: 1;
+              animation-fill-mode: forwards;
+            }
+          }
+        }
+      }
+    }
+    .slider-left {
+      position: absolute;
+      z-index: 3;
+      display: block;
+      right: 85%;
+      top: 50%;
+      color: #ffffff;
+      transform: translateY(-50%);
+      padding: 20px 15px;
+      border-top: 2px solid #fdc84b;
+      border-right: 2px solid #fdc84b;
+      border-bottom: 2px solid #fdc84b;
+      border-left: 2px solid #fdc84b;
+      margin-right: -2px;
+    }
+    .slider-right {
+      position: absolute;
+      z-index: 3;
+      display: block;
+      left: 85%;
+      top: 50%;
+      color: #ffffff;
+      transform: translateY(-50%);
+      padding: 20px 15px;
+      border-top: 2px solid #fdc84b;
+      border-right: 2px solid #fdc84b;
+      border-bottom: 2px solid #fdc84b;
+      border-left: 2px solid #fdc84b;
+      margin-left: -2px;
+    }
+    .not-visible {
+      display: none !important;
+    }
   }
   
  
