--- a/app/views/html/_header.html.erb
+++ b/app/views/html/_header.html.erb
@@ -17,7 +17,7 @@
           </li>
           
           <li class="dropdown">
-            <a class="dropbtn">Events <b class="caret"></b></a>
+            <a href="#" class="dropbtn">Events <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><%= link_to "All Events", "/events", class: "nav-link" %></li>
               <li><%= link_to "My Events", "/myevents", class: "nav-link" %></li>
@@ -32,7 +32,7 @@
               <%= link_to "Friends (" + current_user.friends.count.to_s + ")", "/friends", class: "nav-link" %>
             </li>
             <li class="dropdown">
-              <a class="dropbtn"><%= getName(current_user.id, current_user.id) %> <b class="caret"></b></a>
+              <a href="#" class="dropbtn"><%= getName(current_user.id, current_user.id) %> <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li>
                   <a href="/users/<%= current_user.id %>">View Profile</a>
@@ -58,16 +58,18 @@
               <%= link_to "Log in", new_user_session_path, class: "nav-link" %>
             </li>
           <% end %>
+          <div class="clear"></div>
         </ul>
       </nav>
     </div>
   </header>
-  <div class="alert alert-warning">
+  <div id="alert" class="alert alert-warning">
       <%= alert %>
   </div>
-  <div class="notice alert-success">
+  <div id="notice" class="notice alert-success">
       <%= notice %>
   </div>
+  <%= javascript_pack_tag "nav" %>
   
   <div id="body">
 
