--- a/app/views/profiles/reviews.html.erb
+++ b/app/views/profiles/reviews.html.erb
@@ -1,4 +1,4 @@
-<h2>Reviews for <%= getName(current_user.id, @u.id) %></h2>
+<h2>Reviews for <%= getName(current_user.id, @u.id) %>'s Events</h2>
 <% if @rs.count == 0 %>
     <p>There are no reviews yet for this user.</p>
 <% else
