--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,55 +1,2 @@
-
-<div class="slider-container featured col-xs-12 col-md-4">
-    <h2>Recent Reviews</h2>
-    <div class="slider-content">
-
-        <div class="slider-single">
-            <img class="slider-single-image" src="https://picsum.photos/id/973/200/300" alt="1" />
-            <h1 class="slider-single-title">Through the Mountains</h1>
-        </div>
-
-        <div class="slider-single">
-            <img class="slider-single-image" src="https://picsum.photos/id/974/200/300" alt="2" />
-            <h1 class="slider-single-title">Through the Mountains</h1>
-        </div>
-
-        <div class="slider-single">
-            <img class="slider-single-image" src="https://picsum.photos/id/975/200/300" alt="3" />
-            <h1 class="slider-single-title">Through the Mountains</h1>
-        </div>
-
-
-        <div class="slider-single">
-            <img class="slider-single-image" src="https://picsum.photos/id/976/200/300" alt="4" />
-            <h1 class="slider-single-title">Through the Mountains</h1>
-        </div>
-
-
-        <div class="slider-single">
-            <img class="slider-single-image" src="https://picsum.photos/id/977/200/300" alt="5" />
-            <h1 class="slider-single-title">Through the Mountains</h1>
-        </div>
-
-        <div class="slider-single">
-            <img class="slider-single-image" src="https://picsum.photos/id/978/200/300" alt="6" />
-            <h1 class="slider-single-title">Through the Mountains</h1>
-            <a class="slider-single-likes" href="javascript:void(0);">
-                <i class="fa fa-heart"></i>
-                <p>1,247</p>
-            </a>
-        </div>
-    </div>
-</div>
-
-<%= javascript_pack_tag "carousel" %>
-
-<div class="col-md-8">
-    <% @as = Event.find_by(id: 10).attending %>
-    <p>Attending: <%= @as.count.to_s %></p>
-    <% @as.each do |a| %>
-        <p><%= a.user_id.to_s %></p>
-        <p><%= link_to 'Delete', a, method: :delete, :role=>"button", :class => "btn btn-danger", data: { confirm: 'Are you sure?' } %></p>
-    <% end %>
-
-</div>
-<div class="clear">
+<h1>StaticPages#about</h1>
+<p>Find me in app/views/static_pages/about.html.erb</p>
