more last minute fixes

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -39,7 +39,7 @@
 
     <h3>Address</h3>
     <p>Your address is just used to determine your location, and will not be shown to other users.</p>
-    <a href='#' id='geolocate' class='btn btn-success'>Find me (Approximately)</a>
+    <a href='javascript:void(0);' id='geolocate' class='btn btn-success'>Find me (Approximately)</a>
     <div id="message"></div>
     <%= javascript_pack_tag 'maps' %>
     <div class="field">
