--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,6 @@ html, body {
 
 body {
     font-family:"Cambria", "Open Sans";
-    background:aliceblue;
 }
 
 #body {
@@ -157,9 +156,9 @@ h1 {
 //featured users/events
 .featured {
     h2 {
-        background-color:#030;
+        background-color:#49b8cc;
         color:#fff;
-        border:1px solid #030;
+        border:1px solid #49b8cc;
         border-radius:25px 25px 0px 0px;
     }
 }
