--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -9,16 +9,18 @@
   text-transform: uppercase;
 }
 
-.navbar .nav {
-  font-family: 'Open Sans', sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  font-size: 1.2rem;
-  max-width:100%;
+.navbar {
+  .nav {
+    font-family: 'Open Sans', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-size: 1.2rem;
+    max-width:100%;
+  }
 }
 
 .navbar-inverse {
-  background-color: #003300;
+  background-color: #FFF;
 }
 
 .navbar-collapse {
@@ -28,7 +30,7 @@
 .navbar-inverse .navbar-nav>.active>a:hover,
 .navbar-inverse .navbar-nav>li>a:hover,
 .navbar-inverse .navbar-nav>li>a:focus {
-  background-color: #002200;
+  background-color: #EEE;
 }
 
 .navbar-inverse .navbar-nav>.active>a,
@@ -38,16 +40,16 @@
 .navbar-inverse .navbar-nav>.open>a,
 .navbar-inverse .navbar-nav>.open>a:hover,
 .navbar-inverse .navbar-nav>.open>a:focus {
-  background-color: #003300;
+  background-color: #FFF;
 }
 
 .dropdown-menu {
-  background-color: #006B00;
+  background-color: #FFF;
 }
 
 .dropdown-menu>li>a:hover,
 .dropdown-menu>li>a:focus {
-  background-color: #002200;
+  background-color: #EEE;
 }
 
 .navbar-inverse {
@@ -60,61 +62,62 @@
 }
 
 .navbar-inverse {
-  border-color: #003300;
+  border-color: #CCC;
 }
 
 .navbar-inverse .navbar-brand {
-  color: #FFFFFF;
+  color: #191919;
 }
 
 .navbar-inverse .navbar-brand:hover {
-  color: #FFCC00;
+  color: #191919;
 }
 
 .navbar-inverse .navbar-nav>li>a {
-  color: #FFFFFF;
+  color: #191919;
+  font-size:14px;
 }
 
 .navbar-inverse .navbar-nav>li>a:hover,
 .navbar-inverse .navbar-nav>li>a:focus {
-  color: #FFCC00;
+  color: #191919;
 }
 
 .navbar-inverse .navbar-nav>.active>a,
 .navbar-inverse .navbar-nav>.open>a,
 .navbar-inverse .navbar-nav>.open>a:hover,
 .navbar-inverse .navbar-nav>.open>a:focus {
-  color: #FFCC00;
+  color: #191919;
 }
 
 .navbar-inverse .navbar-nav>.active>a:hover,
 .navbar-inverse .navbar-nav>.active>a:focus {
-  color: #FFCC00;
+  color: #191919;
 }
 
 .dropdown-menu>li>a {
-  color: #FFFFFF;
+  color: #191919;
 }
 
 .dropdown-menu>li>a:hover,
 .dropdown-menu>li>a:focus {
-  color: #FFCC00;
+  color: #191919;
 }
 
 .navbar-inverse .navbar-nav>.dropdown>a .caret {
-  border-top-color: #FFFFFF;
+  border-top-color: #191919;
 }
 
 .navbar-inverse .navbar-nav>.dropdown>a:hover .caret {
-  border-top-color: #FFFFFF;
+  border-top-color: #191919;
 }
 
 .navbar-inverse .navbar-nav>.dropdown>a .caret {
-  border-bottom-color: #FFFFFF;
+  border-bottom-color: #191919;
 }
 
 .navbar-inverse .navbar-nav>.dropdown>a:hover .caret {
-  border-bottom-color: #FFFFFF;
+  border-bottom-color: #191919;
 }
 
 
@@ -141,5 +144,5 @@ img.logo {
 }
 
 li.blue {
-  background-color:cadetblue;
+  background-color:#CCC;
 }
