--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -3,10 +3,11 @@ footer {
     bottom:0;
     width:100%;
     height:120px;   /* footer height must match body padding */
-    background-color:#003300;
+    background-color:#FFF;
+    border-top:1px solid #CCC;
 
     p {
-        color:#fff;
+        color:#191919;
         text-align:center;
         margin:0px;
         padding:20px;
@@ -21,6 +22,7 @@ footer {
             background-color:#fff;
             height:34px;
             width:34px;
+            border:1px solid #CCC;
         }
         a:hover {
             text-decoration:none;
